# stock_analysis

./: README.md
Code/stock_analysis/: README.md  pyproject.toml  requirements.txt  setup.py
Code/stock_analysis/src/: __init__.py
Code/stock_analysis/src/experimental_algorithms/: genetic_strategy.py
Code/stock_analysis/src/models/: database.py  option.py  stock.py  trade.py
Code/stock_analysis/src/stock_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Code/stock_analysis/src/strategies/: __init__.py  base_strategy.py  bollinger_bands_strategy.py  metrics.py  moving_average_strategy.py  optimization.py  rsi_strategy.py  strategy_comparison.py  strategy_optimizer.py
Code/stock_analysis/stock_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Code/stock_analysis/tests/: test_option.py  test_stock.py  test_trade.py
